--- a/index.html
+++ b/index.html
@@ -2,11 +2,52 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>Zirax_daw - مركز التحميل</title>
+  <title>ZIRAX - موقع التحميل</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin:0; background:#f9f9f9; direction: rtl; }
+    header { background:#25D366; color:white; padding:15px; text-align:center; }
+    header a { background:white; color:#25D366; padding:8px 12px; border-radius:5px; text-decoration:none; font-weight:bold; }
+    .container { width:90%; margin:auto; padding:20px; }
+    .banner img { width:100%; border-radius:10px; }
+    .profile { display:flex; align-items:center; margin-top:15px; }
+    .profile img { width:40px; height:40px; border-radius:50%; margin-left:10px; }
+    .card { background:white; padding:15px; margin-top:20px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
+    a.btn { display:inline-block; margin-top:10px; padding:10px 15px; background:#25D366; color:white; border-radius:5px; text-decoration:none; font-weight:bold; }
+  </style>
 </head>
 <body>
-  <h1>📂 أهلاً بك في موقع Zirax_daw</h1>
-  <p>اضغط هنا لتحميل المود:</p>
-  <a href="https://www.mediafire.com/file/xxxxx/mod.zip/file" target="_blank">تحميل</a>
+
+<header>
+  <h1>🌟 ZIRAX</h1>
+  <a href="https://chat.whatsapp.com/EqhRJjgkEjDDQf0uezKPzD?mode=ems_copy_t" target="_blank">انضم عبر واتساب</a>
+</header>
+
+<div class="container">
+
+  <!-- بانر يفتح قناتك يوتيوب -->
+  <div class="banner">
+    <a href="https://youtube.com/@zirax_art?si=SP29rUF0pkaEOl-i" target="_blank">
+      <img src="https://i.ibb.co/8mF8yLv/banner.jpg" alt="ZIRAX Banner">
+    </a>
+  </div>
+
+  <!-- بطاقة مود -->
+  <div class="card">
+    <h2>🔥 أفضل مود جديد من ZIRAX</h2>
+    <div class="profile">
+      <img src="https://i.ibb.co/2Wj8pST/zirax-profile.jpg" alt="البروفايل">
+      <div>
+        <strong>ZIRAX</strong><br>
+        <small>منذ يومين</small>
+      </div>
+    </div>
+    <p>
+      هذا هو أحدث مود من تطوير ZIRAX. يمكنك تحميله مباشرة من ميديافاير أو متابعة قناتي على يوتيوب.
+    </p>
+    <a href="https://www.mediafire.com/file/xxxxx/mod.zip/file" class="btn" target="_blank">⬇️ تحميل المود</a>
+  </div>
+
+</div>
+
 </body>
 </html>
