--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
   <meta charset="UTF-8">
   <title>ZIRAX - موقع التحميل</title>
   <style>
-    body { font-family: Arial, sans-serif; margin:0; background:#f9f9f9; direction: rtl; }
+    body { font-family: "Tahoma", Arial, sans-serif; margin:0; background:#f9f9f9; direction: rtl; line-height: 1.8; }
     header { background:#25D366; color:white; padding:15px; text-align:center; }
-    header a { background:white; color:#25D366; padding:8px 12px; border-radius:5px; text-decoration:none; font-weight:bold; }
-    .container { width:90%; margin:auto; padding:20px; }
-    .banner img { width:100%; border-radius:10px; }
-    .profile { display:flex; align-items:center; margin-top:15px; }
-    .profile img { width:40px; height:40px; border-radius:50%; margin-left:10px; }
-    .card { background:white; padding:15px; margin-top:20px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
-    a.btn { display:inline-block; margin-top:10px; padding:10px 15px; background:#25D366; color:white; border-radius:5px; text-decoration:none; font-weight:bold; }
+    header h1 { font-size: 26px; margin:0; }
+    header a { background:white; color:#25D366; padding:10px 15px; border-radius:6px; text-decoration:none; font-weight:bold; font-size: 16px; }
+    .container { width:92%; margin:auto; padding:20px; }
+    .banner img { width:100%; border-radius:12px; }
+    .card { background:white; padding:20px; margin-top:20px; border-radius:12px; box-shadow:0 2px 6px rgba(0,0,0,0.1); }
+    .card h2 { font-size:22px; margin-bottom:10px; color:#222; }
+    .profile { display:flex; align-items:center; margin-bottom:15px; }
+    .profile img { width:45px; height:45px; border-radius:50%; margin-left:12px; }
+    .profile strong { font-size:16px; color:#111; }
+    .profile small { color:#666; font-size:13px; }
+    .card p { font-size:16px; color:#333; font-weight:500; }
+    a.btn { display:inline-block; margin-top:15px; padding:12px 18px; background:#25D366; color:white; border-radius:6px; text-decoration:none; font-weight:bold; font-size:15px; }
+    a.btn:hover { background:#20b857; }
   </style>
 </head>
 <body>
@@ -35,14 +41,15 @@
   <div class="card">
     <h2>🔥 أفضل مود جديد من ZIRAX</h2>
     <div class="profile">
-      <img src="https://i.ibb.co/2Wj8pST/zirax-profile.jpg" alt="البروفايل">
+      <img src="https://i.ibb.co/gZss3FkY/profile.jpg" alt="البروفايل">
       <div>
         <strong>ZIRAX</strong><br>
         <small>منذ يومين</small>
       </div>
     </div>
     <p>
-      هذا هو أحدث مود من تطوير ZIRAX. يمكنك تحميله مباشرة من ميديافاير أو متابعة قناتي على يوتيوب.
+      هذا هو أحدث مود من تطوير ZIRAX.  
+      يمكنك تحميله مباشرة من ميديافاير أو مشاهدة شرحه في قناتي على يوتيوب.
     </p>
     <a href="https://www.mediafire.com/file/xxxxx/mod.zip/file" class="btn" target="_blank">⬇️ تحميل المود</a>
   </div>
