--- a/index.html
+++ b/index.html
@@ -1,60 +1,48 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <title>ZIRAX - موقع التحميل</title>
-  <style>
-    body { font-family: "Tahoma", Arial, sans-serif; margin:0; background:#f9f9f9; direction: rtl; line-height: 1.8; }
-    header { background:#25D366; color:white; padding:15px; text-align:center; }
-    header h1 { font-size: 26px; margin:0; }
-    header a { background:white; color:#25D366; padding:10px 15px; border-radius:6px; text-decoration:none; font-weight:bold; font-size: 16px; }
-    .container { width:92%; margin:auto; padding:20px; }
-    .banner img { width:100%; border-radius:12px; }
-    .card { background:white; padding:20px; margin-top:20px; border-radius:12px; box-shadow:0 2px 6px rgba(0,0,0,0.1); }
-    .card h2 { font-size:22px; margin-bottom:10px; color:#222; }
-    .profile { display:flex; align-items:center; margin-bottom:15px; }
-    .profile img { width:45px; height:45px; border-radius:50%; margin-left:12px; }
-    .profile strong { font-size:16px; color:#111; }
-    .profile small { color:#666; font-size:13px; }
-    .card p { font-size:16px; color:#333; font-weight:500; }
-    a.btn { display:inline-block; margin-top:15px; padding:12px 18px; background:#25D366; color:white; border-radius:6px; text-decoration:none; font-weight:bold; font-size:15px; }
-    a.btn:hover { background:#20b857; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>موقع ZIRAX</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+            color: #fff;
+            text-align: center;
+            padding-top: 60px;
+            margin: 0;
+        }
+        .container {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 25px;
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            display: inline-block;
+            animation: fadeIn 2s ease-in-out;
+        }
+        h1 {
+            font-size: 36px;
+            color: #ffcc00;
+            text-shadow: 0 0 10px #ff9900, 0 0 20px #ff6600;
+        }
+        p {
+            font-size: 20px;
+            color: #e0e0e0;
+            text-shadow: 0 0 8px #00e6e6;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.9); }
+            to { opacity: 1; transform: scale(1); }
+        }
+    </style>
 </head>
 <body>
 
-<header>
-  <h1>🌟 ZIRAX</h1>
-  <a href="https://chat.whatsapp.com/EqhRJjgkEjDDQf0uezKPzD?mode=ems_copy_t" target="_blank">انضم عبر واتساب</a>
-</header>
-
-<div class="container">
-
-  <!-- بانر يفتح قناتك يوتيوب -->
-  <div class="banner">
-    <a href="https://youtube.com/@zirax_art?si=SP29rUF0pkaEOl-i" target="_blank">
-      <img src="https://i.ibb.co/8mF8yLv/banner.jpg" alt="ZIRAX Banner">
-    </a>
-  </div>
-
-  <!-- بطاقة مود -->
-  <div class="card">
-    <h2>🔥 أفضل مود جديد من ZIRAX</h2>
-    <div class="profile">
-      <img src="https://i.ibb.co/gZss3FkY/profile.jpg" alt="البروفايل">
-      <div>
-        <strong>ZIRAX</strong><br>
-        <small>منذ يومين</small>
-      </div>
+    <div class="container">
+        <h1>🔥⚡ مرحباً بك في موقع ZIRAX 🎮🌟</h1>
+        <p>🚀 هذا هو موقعك الجديد ✨ يمكنك البدء في إضافة المحتوى الأسطوري هنا 💎🔥</p>
     </div>
-    <p>
-      هذا هو أحدث مود من تطوير ZIRAX.  
-      يمكنك تحميله مباشرة من ميديافاير أو مشاهدة شرحه في قناتي على يوتيوب.
-    </p>
-    <a href="https://www.mediafire.com/file/xxxxx/mod.zip/file" class="btn" target="_blank">⬇️ تحميل المود</a>
-  </div>
-
-</div>
 
 </body>
 </html>
