--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
@@ -7,8 +7,8 @@
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: #fff;
+      background: #ffffff;
+      color: #333;
       margin: 0;
       direction: rtl;
     }
@@ -17,8 +17,9 @@
       display: flex;
       justify-content: flex-end;
       align-items: center;
-      background: rgba(0, 0, 0, 0.6);
+      background: #f7f7f7;
       padding: 10px 20px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       position: relative;
     }
     /* زر الثلاث شرطات */
@@ -26,6 +27,7 @@
       font-size: 28px;
       cursor: pointer;
       user-select: none;
+      color: #333;
     }
     /* القائمة المخفية */
     .menu {
@@ -33,10 +35,10 @@
       position: absolute;
       top: 50px;
       right: 20px;
-      background: rgba(0, 0, 0, 0.95);
+      background: #fff;
       border-radius: 10px;
       padding: 10px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.8);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       z-index: 1000;
       width: 240px;
       text-align: right;
@@ -67,17 +69,26 @@
     .container {
       text-align: center;
       padding: 40px 20px;
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
     }
     h1 {
       font-size: 38px;
       margin-bottom: 15px;
-      background: linear-gradient(90deg, #ffcc00, #ff6600, #ff0000);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 15px #ff6600, 0 0 25px #ff3300;
+      color: #222;
+      text-shadow: 0 0 5px #aaa;
       font-weight: bold;
+    }
+    .desc-box {
+      margin-top: 25px;
+      background: #f9f9f9;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.1);
+      text-align: justify;
+      line-height: 1.8;
+      font-size: 18px;
+      color: #444;
     }
   </style>
 </head>
@@ -106,6 +117,41 @@
   <div class="container">
     <h1>✨🔥 مرحباً بك في موقع ZIRAX الأسطورة ⚡👑</h1>
     <p>🚀 هنا تبدأ رحلتك في عالم الإبداع والحماس مع ZIRAX 💎🔥</p>
+
+    <!-- وصف الموقع الطويل -->
+    <div class="desc-box">
+      🌟 أهلاً وسهلاً بك في مملكة <b>ZIRAX</b> الأسطورية ⚡👑 <br><br>
+
+      💠 هنا تبدأ رحلتك إلى عالم مختلف تماماً عن أي مكان آخر...  
+      حيث الإبداع يلتقي بالقوة، والتصميم يندمج مع الحماس، لتُصنع تجربة  
+      فريدة مليئة بالإثارة 🚀🔥.  
+
+      🎮 في هذا الموقع ستجد كل ما تحتاجه وأكثر:  
+      ✨ مولدات قوية تساعدك على إنجاز أعمالك بسهولة.  
+      💾 تحميلات حصرية لا يمكنك العثور عليها في أي مكان آخر.  
+      🎬 شروحات مصورة ومفصلة تجعلك تتقن كل أداة وخدمة.  
+      🎭 أفكار مبتكرة وأسرار مميزة تفتح أمامك أبواباً جديدة للإبداع.  
+
+      <br><br>
+      🌌 نحن في <b>ZIRAX</b> نؤمن أن القوة الحقيقية ليست فقط في الأدوات،  
+      بل في طريقة استخدامها. لذلك نصنع محتوى يدمج بين المعرفة 💡 والمتعة 🎉،  
+      بين الاحترافية 🎯 والسهولة 👌.  
+
+      🚀 هدفنا هو أن نمنحك القدرة على اكتشاف إمكانياتك، وأن نرافقك  
+      خطوة بخطوة في رحلتك نحو الإبداع والتألق 🌟.  
+
+      <br><br>
+      💥 هنا، لن تكون مجرد زائر...  
+      بل ستصبح جزءاً من عائلة <b>ZIRAX</b> 💎، حيث نشاركك كل جديد،  
+      ونكشف لك أسراراً تجعل تجربتك أسطورية بحق 🔱🔥.  
+
+      🎨 استعد لتعيش تجربة مختلفة، تجربة ستغير نظرتك للتكنولوجيا  
+      والإبداع والتصميم. لأنك مع <b>ZIRAX</b>… لن تقبل بالقليل أبداً ✨👑  
+
+      <br><br>
+      🌟✨ مرحباً بك مرة أخرى في عالمنا، عالم <b>ZIRAX</b> حيث  
+      الأحلام تتحول إلى واقع، والإبداع لا يعرف حدوداً 🚀🔥.  
+    </div>
   </div>
 
   <script>
