--- a/index.html
+++ b/index.html
@@ -1,165 +1,96 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>موقع ZIRAX</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>ZIRAX - Best Mod Publisher</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background: #ffffff;
-      color: #333;
       margin: 0;
+      font-family: "Arial", sans-serif;
+      background: #fff;
+      color: #222;
       direction: rtl;
     }
-    /* شريط علوي */
-    .navbar {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      background: #f7f7f7;
-      padding: 10px 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      position: relative;
-    }
-    /* زر الثلاث شرطات */
-    .menu-btn {
-      font-size: 28px;
-      cursor: pointer;
-      user-select: none;
-      color: #333;
-    }
-    /* القائمة المخفية */
-    .menu {
-      display: none;
-      position: absolute;
-      top: 50px;
-      right: 20px;
-      background: #fff;
-      border-radius: 10px;
-      padding: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      z-index: 1000;
-      width: 240px;
-      text-align: right;
-    }
-    .menu a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      padding: 12px;
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      margin: 8px 0;
-      border-radius: 6px;
-      transition: 0.3s;
-      font-size: 16px;
-    }
-    .menu a img {
-      width: 22px;
-      height: 22px;
-      border-radius: 4px;
-    }
-    .menu a.google { background: #db4437; }
-    .menu a.facebook { background: #1877f2; }
-    .menu a.microsoft { background: #2b579a; }
-    .menu a:hover { opacity: 0.85; }
-
-    .container {
+    h2.section-title {
+      font-size: 24px;
+      margin: 20px 0;
       text-align: center;
-      padding: 40px 20px;
+      color: #8b0000;
+      font-weight: bold;
+      text-shadow: 1px 1px #aaa;
+    }
+    .mods-list {
       max-width: 800px;
       margin: auto;
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
     }
-    h1 {
-      font-size: 38px;
-      margin-bottom: 15px;
-      color: #222;
-      text-shadow: 0 0 5px #aaa;
-      font-weight: bold;
+    .mod-box {
+      background: #fafafa;
+      padding: 16px;
+      border-radius: 10px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.08);
     }
-    .desc-box {
-      margin-top: 25px;
-      background: #f9f9f9;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
-      text-align: justify;
-      line-height: 1.8;
+    .mod-box h3 {
+      margin: 0 0 10px;
       font-size: 18px;
-      color: #444;
+      color: #333;
+      text-align: right;
+    }
+    .download-btn {
+      display: inline-block;
+      background: #8b0000;
+      color: #fff;
+      padding: 8px 14px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.2s;
+    }
+    .download-btn:hover {
+      background: #b22222;
     }
   </style>
 </head>
 <body>
 
-  <!-- الشريط العلوي -->
-  <div class="navbar">
-    <div class="menu-btn" onclick="toggleMenu()">☰</div>
-    <div class="menu" id="menu">
-      <a class="google" href="https://accounts.google.com" target="_blank">
-        <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google">
-        تسجيل الدخول بجوجل
-      </a>
-      <a class="facebook" href="https://www.facebook.com/login" target="_blank">
-        <img src="https://www.svgrepo.com/show/475647/facebook-color.svg" alt="Facebook">
-        تسجيل الدخول بفيسبوك
-      </a>
-      <a class="microsoft" href="https://login.live.com" target="_blank">
-        <img src="https://www.svgrepo.com/show/475700/microsoft-color.svg" alt="Microsoft">
-        تسجيل الدخول بمايكروسوفت
-      </a>
+  <!-- قسم المودات -->
+  <h2 class="section-title">✨🔥 أفضـل ٥ مـودات لمـايـن كـرافـت الجـوال 🔥✨</h2>
+
+  <div class="mods-list">
+    <!-- مود 1 -->
+    <div class="mod-box">
+      <h3>🕌 مـــود اللغــــة العـربـيــة (إصدار 1.21.100)</h3>
+      <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/l3w4giurvu50x4t/%25D9%2585%25D9%2588%25D8%25AF_%25D8%25A7%25D9%2584%25D9%2584%25D8%25BA%25D8%25A9_%25D8%25A7%25D9%2584%25D8%25B9%25D8%25B1%25D8%25A8%25D9%258A%25D8%25A9_%25D8%25AD%25D9%2582%25D9%2588%25D9%2582_ZaX.mcaddon/file">⬇️ تحميـل</a>
+    </div>
+
+    <!-- مود 2 -->
+    <div class="mod-box">
+      <h3>🌙 مـــود نـايـت فيـجـن (إصدار 1.21.100)</h3>
+      <a class="download-btn" target="_blank" href="#">⬇️ تحميـل</a>
+    </div>
+
+    <!-- مود 3 -->
+    <div class="mod-box">
+      <h3>⚡ مــود التحلـيـل السريــع (إصدار 1.21.100)</h3>
+      <a class="download-btn" target="_blank" href="#">⬇️ تحميـل</a>
+    </div>
+
+    <!-- مود 4 -->
+    <div class="mod-box">
+      <h3>🚢 مــود السفــن في إيــران كرافت (إصدار 1.21.100)</h3>
+      <a class="download-btn" target="_blank" href="#">⬇️ تحميـل</a>
+    </div>
+
+    <!-- مود 5 -->
+    <div class="mod-box">
+      <h3>🗡️ مــود ضــرب مـثـلـى الجـافـا (إصدار 1.21.100)</h3>
+      <a class="download-btn" target="_blank" href="#">⬇️ تحميـل</a>
     </div>
   </div>
-
-  <!-- المحتوى -->
-  <div class="container">
-    <h1>✨🔥 مرحباً بك في موقع ZIRAX الأسطورة ⚡👑</h1>
-    <p>🚀 هنا تبدأ رحلتك في عالم الإبداع والحماس مع ZIRAX 💎🔥</p>
-
-    <!-- وصف الموقع الطويل -->
-    <div class="desc-box">
-      🌟 أهلاً وسهلاً بك في مملكة <b>ZIRAX</b> الأسطورية ⚡👑 <br><br>
-
-      💠 هنا تبدأ رحلتك إلى عالم مختلف تماماً عن أي مكان آخر...  
-      حيث الإبداع يلتقي بالقوة، والتصميم يندمج مع الحماس، لتُصنع تجربة  
-      فريدة مليئة بالإثارة 🚀🔥.  
-
-      🎮 في هذا الموقع ستجد كل ما تحتاجه وأكثر:  
-      ✨ مولدات قوية تساعدك على إنجاز أعمالك بسهولة.  
-      💾 تحميلات حصرية لا يمكنك العثور عليها في أي مكان آخر.  
-      🎬 شروحات مصورة ومفصلة تجعلك تتقن كل أداة وخدمة.  
-      🎭 أفكار مبتكرة وأسرار مميزة تفتح أمامك أبواباً جديدة للإبداع.  
-
-      <br><br>
-      🌌 نحن في <b>ZIRAX</b> نؤمن أن القوة الحقيقية ليست فقط في الأدوات،  
-      بل في طريقة استخدامها. لذلك نصنع محتوى يدمج بين المعرفة 💡 والمتعة 🎉،  
-      بين الاحترافية 🎯 والسهولة 👌.  
-
-      🚀 هدفنا هو أن نمنحك القدرة على اكتشاف إمكانياتك، وأن نرافقك  
-      خطوة بخطوة في رحلتك نحو الإبداع والتألق 🌟.  
-
-      <br><br>
-      💥 هنا، لن تكون مجرد زائر...  
-      بل ستصبح جزءاً من عائلة <b>ZIRAX</b> 💎، حيث نشاركك كل جديد،  
-      ونكشف لك أسراراً تجعل تجربتك أسطورية بحق 🔱🔥.  
-
-      🎨 استعد لتعيش تجربة مختلفة، تجربة ستغير نظرتك للتكنولوجيا  
-      والإبداع والتصميم. لأنك مع <b>ZIRAX</b>… لن تقبل بالقليل أبداً ✨👑  
-
-      <br><br>
-      🌟✨ مرحباً بك مرة أخرى في عالمنا، عالم <b>ZIRAX</b> حيث  
-      الأحلام تتحول إلى واقع، والإبداع لا يعرف حدوداً 🚀🔥.  
-    </div>
-  </div>
-
-  <script>
-    function toggleMenu() {
-      const menu = document.getElementById('menu');
-      menu.style.display = (menu.style.display === 'block') ? 'none' : 'block';
-    }
-  </script>
 
 </body>
 </html>
