--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       direction: rtl;
     }
     h2.section-title {
-      font-size: 24px;
+      font-size: 26px;
       margin: 20px 0;
       text-align: center;
       color: #8b0000;
@@ -31,14 +31,15 @@
     .mod-box {
       background: #fafafa;
       padding: 16px;
-      border-radius: 10px;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.08);
+      border-radius: 12px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
     }
     .mod-box h3 {
       margin: 0 0 10px;
-      font-size: 18px;
-      color: #333;
+      font-size: 19px;
+      color: #222;
       text-align: right;
+      font-weight: bold;
     }
     .download-btn {
       display: inline-block;
@@ -48,17 +49,28 @@
       border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
+      margin-left: 6px;
       transition: 0.2s;
     }
     .download-btn:hover {
       background: #b22222;
+    }
+    .note {
+      margin-top: 12px;
+      font-size: 14px;
+      color: #444;
+      background: #ffe4e1;
+      padding: 8px;
+      border-radius: 8px;
+      border: 1px dashed #8b0000;
+      line-height: 1.6;
     }
   </style>
 </head>
 <body>
 
   <!-- قسم المودات -->
-  <h2 class="section-title">✨🔥 أفضـل ٥ مـودات لمـايـن كـرافـت الجـوال 🔥✨</h2>
+  <h2 class="section-title">✨🔥 أفضـل ٥ مـودات لمـايـن كـرافـت الجـوال (1.21.100) 🔥✨</h2>
 
   <div class="mods-list">
     <!-- مود 1 -->
@@ -69,26 +81,33 @@
 
     <!-- مود 2 -->
     <div class="mod-box">
-      <h3>🌙 مـــود نـايـت فيـجـن (إصدار 1.21.100)</h3>
-      <a class="download-btn" target="_blank" href="#">⬇️ تحميـل</a>
+      <h3>🌙 مــود نـايـت فيـجـن (إصدار 1.21.100)</h3>
+      <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/5swemgfjkbcfeuc/Night_Vision_%257BZirax%257D.mcpack/file">⬇️ تحميـل</a>
     </div>
 
     <!-- مود 3 -->
     <div class="mod-box">
       <h3>⚡ مــود التحلـيـل السريــع (إصدار 1.21.100)</h3>
-      <a class="download-btn" target="_blank" href="#">⬇️ تحميـل</a>
+      <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/n8d9k70awb5lect/%25D9%2585%25D9%2580%25D9%2580%25D9%2580%25D9%2588%25D8%25AF_%25D8%25AA%25D9%2580%25D9%2580%25D8%25AD%25D9%2584%25D9%2580%25D9%2580%25D9%258A%25D9%2584_%25D8%25A7%25D9%2584%25D8%25B3%25D9%2580%25D9%2580%25D9%2580%25D8%25B1%25D9%258A%25D9%2580%25D9%2580%25D8%25B9_mcpack/file">⬇️ تحميـل</a>
     </div>
 
     <!-- مود 4 -->
     <div class="mod-box">
-      <h3>🚢 مــود السفــن في إيــران كرافت (إصدار 1.21.100)</h3>
-      <a class="download-btn" target="_blank" href="#">⬇️ تحميـل</a>
+      <h3>🚢 مــود السفــن مـتــلا إيــرت كـرافـت (إصدار 1.21.100)</h3>
+      <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/2hi55ia3xbh8jbi/%25D9%2585%25D9%2580%25D9%2580%25D9%2588%25D8%25AF_%25D8%25A7%25D9%2584%25D8%25B3%25D9%2581%25D9%2580%25D9%2580%25D9%2580%25D9%2586_%25D9%2585%25D8%25AA%25D9%2580%25D9%2580%25D9%2584%25D8%25A7__%25D8%25A3%25D9%258A%25D9%2580%25D9%2580%25D8%25B1%25D8%25AA_%25D9%2583%25D9%2580%25D9%2580%25D8%25B1%25D8%25A7%25D9%2581%25D9%2580%25D9%2580%25D8%25AA_%25D9%2585%25D9%2580%25D9%2580%25D9%2586_%25D8%25B2%25D9%258A%25D9%2580%25D9%2580%25D8%25B1%25D8%25A7%25D9%2583%25D9%2580%25D9%2580%25D9%2580%25D8%25B3.mcaddon/file">⬇️ تحميـل</a>
     </div>
 
     <!-- مود 5 -->
     <div class="mod-box">
       <h3>🗡️ مــود ضــرب مـثـلـى الجـافـا (إصدار 1.21.100)</h3>
-      <a class="download-btn" target="_blank" href="#">⬇️ تحميـل</a>
+      <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/tymv8azle9suxi6/%25D9%2585%25D9%2580%25D9%2580%25D9%2588%25D8%25AF_%25D8%25B6%25D9%2580%25D9%2580%25D8%25B1%25D8%25A8_%25D9%2585%25D8%25AA%25D9%2580%25D9%2580%25D9%2584%25D8%25A7_%25D8%25AC%25D8%25A7%25D9%2581%25D9%2580%25D9%2580%25D8%25A7_1.mcpack/file">⬇️ تحميـل (الملف الأول)</a>
+      <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/1ah88whbrku58vn/%25D9%2585%25D9%2580%25D9%2580%25D9%2588%25D8%25AF_%25D8%25B6%25D9%2580%25D9%2580%25D8%25B1%25D8%25A8_%25D9%2585%25D8%25AA%25D9%2580%25D9%2580%25D9%2584%25D8%25A7_%25D8%25AC%25D8%25A7%25D9%2581%25D9%2580%25D9%2580%25D8%25A7_2.mcpack/file">⬇️ تحميـل (الملف الثاني)</a>
+      
+      <div class="note">
+        ⚠️ ملاحظة هــامة: هذا المود يتكون من <b>مـلـفـيـن</b>  
+        ➡️ يجب عليك تحميـل الملفيـن معًا وإضافتهم إلى عالمك في Minecraft.  
+        ❌ إذا أضفت واحد فقط فلن يشتغل المود بشكل صحيح.
+      </div>
     </div>
   </div>
 
