--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ar">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ZIRAX - Best Mod Publisher</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>ZIRAX - كلمة المرور</title>
   <style>
     body {
       margin: 0;
@@ -11,14 +11,37 @@
       background: #fff;
       color: #222;
       direction: rtl;
-    }
-    h2.section-title {
-      font-size: 26px;
-      margin: 20px 0;
       text-align: center;
-      color: #8b0000;
-      font-weight: bold;
-      text-shadow: 1px 1px #aaa;
+      padding: 40px;
+    }
+    .hidden { display: none; }
+    input[type="password"] {
+      padding: 10px;
+      font-size: 16px;
+      border: 2px solid #8b0000;
+      border-radius: 6px;
+      width: 200px;
+      margin-bottom: 10px;
+    }
+    button {
+      padding: 10px 20px;
+      background: #8b0000;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover { background: #b22222; }
+    .note {
+      margin: 15px 0;
+      font-size: 14px;
+      color: #444;
+      background: #ffe4e1;
+      padding: 8px;
+      border-radius: 8px;
+      border: 1px dashed #8b0000;
+      line-height: 1.6;
     }
     .mods-list {
       max-width: 800px;
@@ -33,13 +56,7 @@
       padding: 16px;
       border-radius: 12px;
       box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-    }
-    .mod-box h3 {
-      margin: 0 0 10px;
-      font-size: 19px;
-      color: #222;
       text-align: right;
-      font-weight: bold;
     }
     .download-btn {
       display: inline-block;
@@ -49,67 +66,83 @@
       border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
-      margin-left: 6px;
+      margin-top: 8px;
       transition: 0.2s;
     }
-    .download-btn:hover {
-      background: #b22222;
-    }
-    .note {
-      margin-top: 12px;
-      font-size: 14px;
-      color: #444;
-      background: #ffe4e1;
-      padding: 8px;
-      border-radius: 8px;
-      border: 1px dashed #8b0000;
-      line-height: 1.6;
-    }
+    .download-btn:hover { background: #b22222; }
   </style>
 </head>
 <body>
 
-  <!-- قسم المودات -->
-  <h2 class="section-title">✨🔥 أفضـل ٥ مـودات لمـايـن كـرافـت الجـوال (1.21.100) 🔥✨</h2>
+  <!-- شاشة كلمة السر -->
+  <div id="lock-screen">
+    <h2>🔒 أدخل كلمة السر للدخول إلى موقع ZIRAX</h2>
+    <input type="password" id="password" placeholder="اكتب كلمة السر">
+    <br>
+    <button onclick="checkPassword()">دخول</button>
 
-  <div class="mods-list">
-    <!-- مود 1 -->
-    <div class="mod-box">
-      <h3>🕌 مـــود اللغــــة العـربـيــة (إصدار 1.21.100)</h3>
-      <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/l3w4giurvu50x4t/%25D9%2585%25D9%2588%25D8%25AF_%25D8%25A7%25D9%2584%25D9%2584%25D8%25BA%25D8%25A9_%25D8%25A7%25D9%2584%25D8%25B9%25D8%25B1%25D8%25A8%25D9%258A%25D8%25A9_%25D8%25AD%25D9%2582%25D9%2588%25D9%2582_ZaX.mcaddon/file">⬇️ تحميـل</a>
+    <div class="note">
+      ⚠️ ملاحظة: كلمة السر ستجدها في الفيديو بالأسفل ⬇️
     </div>
 
-    <!-- مود 2 -->
-    <div class="mod-box">
-      <h3>🌙 مــود نـايـت فيـجـن (إصدار 1.21.100)</h3>
-      <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/5swemgfjkbcfeuc/Night_Vision_%257BZirax%257D.mcpack/file">⬇️ تحميـل</a>
-    </div>
+    <!-- فيديو (بدل الرابط برابط فيديو يوتيوب الخاص بك) -->
+    <iframe width="320" height="180" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+  </div>
 
-    <!-- مود 3 -->
-    <div class="mod-box">
-      <h3>⚡ مــود التحلـيـل السريــع (إصدار 1.21.100)</h3>
-      <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/n8d9k70awb5lect/%25D9%2585%25D9%2580%25D9%2580%25D9%2580%25D9%2588%25D8%25AF_%25D8%25AA%25D9%2580%25D9%2580%25D8%25AD%25D9%2584%25D9%2580%25D9%2580%25D9%258A%25D9%2584_%25D8%25A7%25D9%2584%25D8%25B3%25D9%2580%25D9%2580%25D9%2580%25D8%25B1%25D9%258A%25D9%2580%25D9%2580%25D8%25B9_mcpack/file">⬇️ تحميـل</a>
-    </div>
+  <!-- المحتوى المخفي -->
+  <div id="site-content" class="hidden">
 
-    <!-- مود 4 -->
-    <div class="mod-box">
-      <h3>🚢 مــود السفــن مـتــلا إيــرت كـرافـت (إصدار 1.21.100)</h3>
-      <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/2hi55ia3xbh8jbi/%25D9%2585%25D9%2580%25D9%2580%25D9%2588%25D8%25AF_%25D8%25A7%25D9%2584%25D8%25B3%25D9%2581%25D9%2580%25D9%2580%25D9%2580%25D9%2586_%25D9%2585%25D8%25AA%25D9%2580%25D9%2580%25D9%2584%25D8%25A7__%25D8%25A3%25D9%258A%25D9%2580%25D9%2580%25D8%25B1%25D8%25AA_%25D9%2583%25D9%2580%25D9%2580%25D8%25B1%25D8%25A7%25D9%2581%25D9%2580%25D9%2580%25D8%25AA_%25D9%2585%25D9%2580%25D9%2580%25D9%2586_%25D8%25B2%25D9%258A%25D9%2580%25D9%2580%25D8%25B1%25D8%25A7%25D9%2583%25D9%2580%25D9%2580%25D9%2580%25D8%25B3.mcaddon/file">⬇️ تحميـل</a>
-    </div>
+    <h2>✨🔥 أفضـل ٥ مـودات لمـايـن كـرافـت الجـوال (1.21.100) 🔥✨</h2>
 
-    <!-- مود 5 -->
-    <div class="mod-box">
-      <h3>🗡️ مــود ضــرب مـثـلـى الجـافـا (إصدار 1.21.100)</h3>
-      <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/tymv8azle9suxi6/%25D9%2585%25D9%2580%25D9%2580%25D9%2588%25D8%25AF_%25D8%25B6%25D9%2580%25D9%2580%25D8%25B1%25D8%25A8_%25D9%2585%25D8%25AA%25D9%2580%25D9%2580%25D9%2584%25D8%25A7_%25D8%25AC%25D8%25A7%25D9%2581%25D9%2580%25D9%2580%25D8%25A7_1.mcpack/file">⬇️ تحميـل (الملف الأول)</a>
-      <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/1ah88whbrku58vn/%25D9%2585%25D9%2580%25D9%2580%25D9%2588%25D8%25AF_%25D8%25B6%25D9%2580%25D9%2580%25D8%25B1%25D8%25A8_%25D9%2585%25D8%25AA%25D9%2580%25D9%2580%25D9%2584%25D8%25A7_%25D8%25AC%25D8%25A7%25D9%2581%25D9%2580%25D9%2580%25D8%25A7_2.mcpack/file">⬇️ تحميـل (الملف الثاني)</a>
-      
-      <div class="note">
-        ⚠️ ملاحظة هــامة: هذا المود يتكون من <b>مـلـفـيـن</b>  
-        ➡️ يجب عليك تحميـل الملفيـن معًا وإضافتهم إلى عالمك في Minecraft.  
-        ❌ إذا أضفت واحد فقط فلن يشتغل المود بشكل صحيح.
+    <div class="mods-list">
+      <!-- مود 1 -->
+      <div class="mod-box">
+        <h3>🕌 مود اللغة العربية</h3>
+        <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/l3w4giurvu50x4t/%25D9%2585%25D9%2588%25D8%25AF_%25D8%25A7%25D9%2584%25D9%2584%25D8%25BA%25D8%25A9_%25D8%25A7%25D9%2584%25D8%25B9%25D8%25B1%25D8%25A8%25D9%258A%25D8%25A9_%25D8%25AD%25D9%2582%25D9%2588%25D9%2582_ZaX.mcaddon/file">⬇️ تحميل</a>
+      </div>
+
+      <!-- مود 2 -->
+      <div class="mod-box">
+        <h3>🌙 مود نايت فيجن</h3>
+        <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/5swemgfjkbcfeuc/Night_Vision_%257BZirax%257D.mcpack/file">⬇️ تحميل</a>
+      </div>
+
+      <!-- مود 3 -->
+      <div class="mod-box">
+        <h3>⚡ مود التحليل السريع</h3>
+        <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/n8d9k70awb5lect/%25D9%2585%25D9%2580%25D9%2580%25D9%2580%25D9%2588%25D8%25AF_%25D8%25AA%25D9%2580%25D9%2580%25D8%25AD%25D9%2584%25D9%2580%25D9%2580%25D9%258A%25D9%2584_%25D8%25A7%25D9%2584%25D8%25B3%25D9%2580%25D9%2580%25D9%2580%25D8%25B1%25D9%258A%25D9%2580%25D9%2580%25D8%25B9_mcpack/file">⬇️ تحميل</a>
+      </div>
+
+      <!-- مود 4 -->
+      <div class="mod-box">
+        <h3>🚢 مود السفن (إيرت كرافت)</h3>
+        <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/2hi55ia3xbh8jbi/%25D9%2585%25D9%2580%25D9%2580%25D9%2588%25D8%25AF_%25D8%25A7%25D9%2584%25D8%25B3%25D9%2581%25D9%2580%25D9%2580%25D9%2580%25D9%2586_%25D9%2585%25D8%25AA%25D9%2580%25D9%2580%25D9%2584%25D8%25A7__%25D8%25A3%25D9%258A%25D9%2580%25D9%2580%25D8%25B1%25D8%25AA_%25D9%2583%25D9%2580%25D9%2580%25D8%25B1%25D8%25A7%25D9%2581%25D9%2580%25D9%2580%25D8%25AA_%25D9%2585%25D9%2580%25D9%2580%25D9%2586_%25D8%25B2%25D9%258A%25D9%2580%25D9%2580%25D8%25B1%25D8%25A7%25D9%2583%25D9%2580%25D9%2580%25D9%2580%25D8%25B3.mcaddon/file">⬇️ تحميل</a>
+      </div>
+
+      <!-- مود 5 -->
+      <div class="mod-box">
+        <h3>🗡️ مود ضرب مثل الجافا</h3>
+        <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/tymv8azle9suxi6/%25D9%2585%25D9%2580%25D9%2580%25D9%2588%25D8%25AF_%25D8%25B6%25D9%2580%25D9%2580%25D8%25B1%25D8%25A8_%25D9%2585%25D8%25AA%25D9%2580%25D9%2580%25D9%2584%25D8%25A7_%25D8%25AC%25D8%25A7%25D9%2581%25D9%2580%25D9%2580%25D8%25A7_1.mcpack/file">⬇️ تحميل (ملف 1)</a>
+        <a class="download-btn" target="_blank" href="https://www.mediafire.com/file/1ah88whbrku58vn/%25D9%2585%25D9%2580%25D9%2580%25D9%2588%25D8%25AF_%25D8%25B6%25D9%2580%25D9%2580%25D8%25B1%25D8%25A8_%25D9%2585%25D8%25AA%25D9%2580%25D9%2580%25D9%2584%25D8%25A7_%25D8%25AC%25D8%25A7%25D9%2581%25D9%2580%25D9%2580%25D8%25A7_2.mcpack/file">⬇️ تحميل (ملف 2)</a>
+        <div class="note">
+          ⚠️ ملاحظة: هذا المود يتكون من <b>ملفين</b> يجب تحميلهما معًا  
+          وإضافتهم لعالمك في Minecraft حتى يشتغل بشكل صحيح ✅
+        </div>
       </div>
     </div>
   </div>
 
+  <script>
+    function checkPassword() {
+      const input = document.getElementById("password").value;
+      if (input === "2030") {
+        document.getElementById("lock-screen").style.display = "none";
+        document.getElementById("site-content").classList.remove("hidden");
+      } else {
+        alert("❌ كلمة السر غير صحيحة! حاول مرة أخرى.");
+      }
+    }
+  </script>
+
 </body>
-    </html>
+  </html>
